fixed horizontal scrollbar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,3 +47,7 @@
   padding-top: 15px;
   padding-bottom: 5px;
 }
+
+body {
+  overflow-x: hidden;
+}
